restrukturyzacja, email verification fix, google auth fix

--- a/src/app/core/auth/verify-email/verify-email.component.html
+++ b/src/app/core/auth/verify-email/verify-email.component.html
@@ -8,12 +8,12 @@
       </div>
 
       <!-- Calling SendVerificationMail() method using authService Api -->
-      <div class="formGroup">
+      <!-- <div class="formGroup">
         <button type="button" class="btn btnPrimary" (click)="authService.SendVerificationMail()">
           <i class="fas fa-redo-alt"></i>
           Resend Verification Email
         </button>
-      </div>
+      </div> -->
     </div>
     <div class="redirectToLogin">
       <span>Go back to?<span class="redirect" routerLink="/sign-in"> Sign in</span></span>
