--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,18 +1,30 @@
-<div class="displayTable">
-  <div class="displayTableCell">
-    <div class="authBlock">
-      <h3>Reset Password</h3>
-      <p class="text-center">Please enter your email address to request a password reset.</p>
-      <div class="formGroup">
-        <input type="email" class="formControl" placeholder="Email Address" #passwordResetEmail required>
+<div class="flex items-center justify-center min-h-screen text-base" style="background-color: #f5f5f5;">
+  <div class="forgot-card w-1/3 ">
+    <mat-card class="p-6">
+      <div class="mb-4">Wprowadź adres E-mail aby zresetować hasło</div>
+
+      <form [formGroup]="form" class="w-full">
+        <div class="mb-4">
+          <mat-form-field class="w-full">
+            <input matInput placeholder="E-mail" type="email" formControlName="email">
+            <mat-error *ngIf="form.get('email')!.hasError('required')">
+              Wymagany adres E-mail
+            </mat-error>
+            <mat-error *ngIf="form.get('email')!.hasError('email')">
+              Niepoprawny adres E-mail
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <button mat-raised-button color="primary" class="w-full mb-4" [disabled]="!form.valid"
+        (click)="authService.ForgotPassword(form.get('email')?.value)">
+          Zresetuj hasło
+        </button>
+      </form>
+
+      <div class="redirectToLogin">
+        <span>Powrót? <a routerLink="/sign-in" class="text-blue-500">Zaloguj się</a></span>
       </div>
-      <!-- Calling ForgotPassword from AuthService Api -->
-      <div class="formGroup">
-        <input type="submit" class="btn btnPrimary" value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)">
-      </div>
-    </div>
-    <div class="redirectToLogin">
-      <span>Go back to ? <span class="redirect" routerLink="/sign-in">Log In</span></span>
-    </div>
+    </mat-card>
   </div>
 </div>
