--- a/src/app/auth/verify-email/verify-email.component.html
+++ b/src/app/auth/verify-email/verify-email.component.html
@@ -1,22 +1,22 @@
-<div class="displayTable">
-  <div class="displayTableCell">
-    <div class="authBlock">
-      <h3>Thank You for Registering</h3>
-      <div class="formGroup" *ngIf="authService.userData as user">
-        <p class="text-center">We have sent a confirmation email to <strong>{{user.email}}</strong>.</p>
-        <p class="text-center">Please check your email and click on the link to verfiy your email address.</p>
+<div class="flex items-center justify-center min-h-screen text-base" style="background-color: #f5f5f5;">
+  <div class="forgot-card w-1/3 ">
+    <mat-card class="p-6">
+      <h2 class="mb-4 text-center">Dziękujemy za rejetrację</h2>
+
+      <div class="mb-4" *ngIf="authService.userData as user">
+        <p class="text-center">Na adres <strong>{{user.email}}</strong> została wysłana wiadomość email</p>
+        <p class="text-center">Sprawdź swoją skrzynkę odbiorczą i kliknij w link, aby zweryfikować adres E-mail</p>
+      </div>
+      <div class="flex justify-center">
+        <button mat-raised-button color="primary" class="w-1/3 mb-4"
+        (click)="authService.SendVerificationMail(true)">
+            Wyślij ponownie
+        </button>
       </div>
 
-      <!-- Calling SendVerificationMail() method using authService Api -->
-      <!-- <div class="formGroup">
-        <button type="button" class="btn btnPrimary" (click)="authService.SendVerificationMail()">
-          <i class="fas fa-redo-alt"></i>
-          Resend Verification Email
-        </button>
-      </div> -->
-    </div>
-    <div class="redirectToLogin">
-      <span>Go back to?<span class="redirect" routerLink="/sign-in"> Sign in</span></span>
-    </div>
+      <div class="redirectToLogin">
+        <span>Powrót? <a routerLink="/sign-in" class="text-blue-500">Zaloguj się</a></span>
+      </div>
+    </mat-card>
   </div>
 </div>
