--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,15 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-mdc-snack-bar-container.error-snackbar {
+  --mdc-snackbar-container-color: rgb(220, 77, 52);
+  --mdc-snackbar-supporting-text-color: white;
+  --mat-snack-bar-button-color: white;
+}
+
+.mat-mdc-snack-bar-container.succes-snackbar {
+  --mdc-snackbar-container-color: rgb(11, 197, 70);
+  --mdc-snackbar-supporting-text-color: white;
+  --mat-snack-bar-button-color: white;
+}
