--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center justify-center min-h-screen text-base" style="background-color: #f5f5f5;">
-  <div class="forgot-card w-1/3 ">
+  <div class="w-2/3 md:w-1/2 xl:w-1/3">
     <mat-card class="p-6">
       <div class="mb-4">Wprowadź adres E-mail aby zresetować hasło</div>
 
@@ -16,7 +16,7 @@
           </mat-form-field>
         </div>
 
-        <button mat-raised-button color="primary" class="w-full mb-4" [disabled]="!form.valid"
+        <button mat-raised-button color="primary" class="w-full mb-6" [disabled]="!form.valid"
         (click)="authService.ForgotPassword(form.get('email')?.value)">
           Zresetuj hasło
         </button>
