--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center justify-center min-h-screen text-base" style="background-color: #f5f5f5;">
-  <div class="signup-card w-1/3 ">
+  <div class="w-2/3 md:w-1/2 xl:w-1/3">
     <mat-card class="p-6">
       <div class="mb-4">Rejestracja</div>
 
@@ -40,7 +40,7 @@
 
 
       <div class="mb-4 text-center">
-        <button mat-button (click)="authService.GoogleAuth()">
+        <button mat-stroked-button (click)="authService.GoogleAuth()">
           <div class="flex items-center">
             <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Icon" class="h-5 w-5 mr-1">
             <span class="ml-2">Kontynuuj z Google</span>
