--- a/src/app/auth/verify-email/verify-email.component.html
+++ b/src/app/auth/verify-email/verify-email.component.html
@@ -1,14 +1,14 @@
 <div class="flex items-center justify-center min-h-screen text-base" style="background-color: #f5f5f5;">
-  <div class="forgot-card w-1/3 ">
+  <div class="w-2/3 md:w-1/2 xl:w-1/3">
     <mat-card class="p-6">
       <h2 class="mb-4 text-center">Dziękujemy za rejetrację</h2>
 
       <div class="mb-4" *ngIf="authService.userData as user">
-        <p class="text-center">Na adres <strong>{{user.email}}</strong> została wysłana wiadomość email</p>
-        <p class="text-center">Sprawdź swoją skrzynkę odbiorczą i kliknij w link, aby zweryfikować adres E-mail</p>
+        <p class="text-center">Na adres <strong>{{user.email}}</strong> został wysłany link aktywacyjny.</p>
+        <p class="text-center">Sprawdź swoją skrzynkę odbiorczą i kliknij w link, aby zweryfikować konto.</p>
       </div>
       <div class="flex justify-center">
-        <button mat-raised-button color="primary" class="w-1/3 mb-4"
+        <button mat-raised-button color="primary" class="w-2/3 lg:w-1/2 2xl:w-1/3 mb-4"
         (click)="authService.SendVerificationMail(true)">
             Wyślij ponownie
         </button>
