--- a/src/app/auth/verify-email/verify-email.component.html
+++ b/src/app/auth/verify-email/verify-email.component.html
@@ -1,7 +1,7 @@
 <div class="flex items-center justify-center min-h-screen text-base" style="background-color: #f5f5f5;">
   <div class="w-2/3 md:w-1/2 xl:w-1/3">
     <mat-card class="p-6">
-      <h2 class="mb-4 text-center">Dziękujemy za rejetrację</h2>
+      <h2 class="mb-4 text-center">Dziękujemy za rejetrację!</h2>
 
       <div class="mb-4" *ngIf="authService.userData as user">
         <p class="text-center">Na adres <strong>{{user.email}}</strong> został wysłany link aktywacyjny.</p>
