--- a/src/app/pages/task-list/task-list.component.html
+++ b/src/app/pages/task-list/task-list.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
   <mat-icon>local_fire_department</mat-icon>
   <span>Kanban Fire</span>
+  <button (click)="authService.SignOut()">Sign out</button>
 </mat-toolbar>
 
 <div class="content-wrapper">
