--- a/src/app/pages/task/task.component.html
+++ b/src/app/pages/task/task.component.html
@@ -1,6 +1,4 @@
 <mat-card class="item" *ngIf="task" (dblclick)="edit.emit(task)">
   <h2>{{ task.title }}</h2>
-  <p>
-    {{ task.description }}
-  </p>
+  <p>{{ task.description }}</p>
 </mat-card>
