--- a/src/app/pages/projects/project/project.component.html
+++ b/src/app/pages/projects/project/project.component.html
@@ -7,7 +7,7 @@
     {{ project.colorCode }}
   </p>
   <p>
-    {{ project.uid }}
+    id: {{ project.id }}
   </p>
-  <a class="text-blue-600" [routerLink]="['/projects/', project.id ,'boards']">Go to Project Boards</a>
+  <a class="text-blue-600" [routerLink]="['/projects/',project.id ,'tasks']">Go to Project Tasks</a>
 </mat-card>
