--- a/src/app/pages/task-list/task-list.component.html
+++ b/src/app/pages/task-list/task-list.component.html
@@ -5,6 +5,7 @@
 </mat-toolbar>
 
 <div class="content-wrapper">
+  <p>{{projectId}}</p>
   <button (click)="newTask()" mat-button>
     <mat-icon>add</mat-icon> Add Task
   </button>
