--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -23,7 +23,7 @@
       </form>
 
       <div class="redirectToLogin">
-        <span>Powrót? <a routerLink="/sign-in" class="text-blue-500">Zaloguj się</a></span>
+        <span>Powrót? <a routerLink="/sign-in" style="color: #3f51b5;">Zaloguj się</a></span>
       </div>
     </mat-card>
   </div>
