--- a/src/app/auth/verify-email/verify-email.component.html
+++ b/src/app/auth/verify-email/verify-email.component.html
@@ -15,7 +15,7 @@
       </div>
 
       <div class="redirectToLogin">
-        <span>Powrót? <a routerLink="/sign-in" class="text-blue-500">Zaloguj się</a></span>
+        <span>Powrót? <a routerLink="/sign-in" style="color: #3f51b5;">Zaloguj się</a></span>
       </div>
     </mat-card>
   </div>
