--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,1 +1,23 @@
-<p>user works!</p>
+<div class="full-height-container flex items-center justify-center text-base" style="background-color: #f5f5f5;">
+  <div class="w-2/3 md:w-1/2 xl:w-1/3">
+    <mat-card class="p-6">
+      <h2 class="mb-4 text-center">Twóje konto</h2>
+
+      <div class="profile-info" *ngIf="authService.userData as user">
+        <div class="profile-picture mb-4">
+          <img src="{{(user.photoURL) ? user.photoURL : '/assets/images/default_pp.jpg'}}" alt="Profile Picture" class="w-28 h-28 rounded-full mx-auto">
+        </div>
+        <p class="profile-field">Imię: <strong>{{ user.displayName || 'N/A' }}</strong></p>
+        <p class="profile-field">E-mail: <strong>{{ user.email }}</strong></p>
+        <p class="profile-field">E-mail zferyfikowany: <strong>{{ user.emailVerified ? 'Tak' : 'Nie' }}</strong></p>
+      </div>
+
+      <div class="flex justify-center">
+        <button mat-raised-button color="primary" class="w-2/3 lg:w-1/2 2xl:w-1/3 mb-4">
+            Edytuj dane
+        </button>
+      </div>
+
+    </mat-card>
+  </div>
+</div>
