--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,8 +1,7 @@
-<mat-toolbar color="primary" class="flex justify-between items-center">
+<mat-toolbar color="primary" class="flex justify-between items-center" style="height: 64px;">
   <div class="flex items-center space-x-10">
     <span>Kanban App</span>
     <button mat-button routerLink="/projects">
-      <mat-icon>folder</mat-icon>
       Projekty
     </button>
   </div>
