--- a/src/app/pages/projects/projects/projects.component.html
+++ b/src/app/pages/projects/projects/projects.component.html
@@ -1,20 +1,17 @@
-<div class="content-wrapper">
-  <button (click)="newProject()" mat-button>
-    <mat-icon>add</mat-icon> Add Project
-  </button>
-
-  <div class="join-project-wrapper">
-    <input type="text" [(ngModel)]="projectId" placeholder="Enter Project ID">
-    <button (click)="joinProject(projectId)" mat-button>Join Project</button>
-  </div>
-
-  <div class="container-wrapper">
-    <div class="container">
-      <h2>Projects</h2>
-      <ng-container *ngIf="projects | async as projectList; else loading">
-        <app-project (edit)="editProject($event)" *ngFor="let project of projectList" [project]="project"></app-project>
-      </ng-container>
+<div class="full-height-container flex justify-center text-base" style="background-color: #f5f5f5;">
+  <div class="w-3/4 mt-4">
+    <div class="flex space-x-4">
+      <button class="mb-4 w-48" mat-raised-button color="primary" (click)="newProject()" mat-button>
+        Stwórz projekt
+      </button>
+      <button class="mb-4 w-48" mat-raised-button color="primary" (click)="joinProject(projectId)">
+        Dołącz do projektu
+      </button>
     </div>
+    <ng-container *ngIf="projects | async as projectList; else loading">
+      <app-project *ngFor="let project of projectList" [project]="project"></app-project>
+        <!-- <app-project (edit)="editProject($event)" *ngFor="let project of projectList" [project]="project"></app-project> -->
+    </ng-container>
   </div>
 </div>
 
