--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,7 +1,7 @@
 <div class="full-height-container flex items-center justify-center text-base" style="background-color: #f5f5f5;">
   <div class="w-2/3 md:w-1/2 xl:w-1/3">
     <mat-card class="p-6">
-      <h2 class="mb-4 text-center">Twóje konto</h2>
+      <h2 class="mb-4 text-center">Twoje konto</h2>
 
       <div class="profile-info" *ngIf="authService.userData as user">
         <div class="profile-picture mb-4">
