--- a/src/app/pages/projects/projects/projects.component.html
+++ b/src/app/pages/projects/projects/projects.component.html
@@ -1,20 +1,60 @@
 <div class="full-height-container flex justify-center text-base" style="background-color: #f5f5f5;">
   <div class="w-3/4 mt-4">
-    <div class="flex space-x-4">
-      <button class="mb-4 w-48" mat-raised-button color="primary" (click)="newProject()" mat-button>
-        Stwórz projekt
-      </button>
-      <button class="mb-4 w-48" mat-raised-button color="primary" (click)="joinProject(projectId)">
-        Dołącz do projektu
-      </button>
+    <div class="flex lg:items-baseline lg:justify-between lg:flex-row items-center flex-col-reverse">
+      <mat-form-field>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Filtruj..." #input>
+      </mat-form-field>
+      <div class="flex space-x-0 flex-col sm:flex-row sm:space-x-4">
+        <button class="mb-4 w-44" mat-raised-button color="primary" (click)="newProject()" mat-button>
+          Stwórz projekt
+        </button>
+        <button class="mb-4 w-44" mat-raised-button color="primary" (click)="joinProject(projectId)">
+          Dołącz do projektu
+        </button>
+      </div>
     </div>
-    <ng-container *ngIf="projects | async as projectList; else loading">
-      <app-project *ngFor="let project of projectList" [project]="project"></app-project>
-        <!-- <app-project (edit)="editProject($event)" *ngFor="let project of projectList" [project]="project"></app-project> -->
-    </ng-container>
+
+    <div class="mat-elevation-z8">
+      <ng-container *ngIf="projects | async as projectList; else loading">
+        <table mat-table [dataSource]="dataSource" matSort>
+
+          <!-- Title Column -->
+          <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nazwa </th>
+            <td mat-cell *matCellDef="let row"> {{row.title}} </td>
+          </ng-container>
+
+          <!-- Key Column -->
+          <ng-container matColumnDef="key">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Skrót </th>
+            <td mat-cell *matCellDef="let row"> {{row.key}} </td>
+          </ng-container>
+
+          <!-- Owner Column -->
+          <ng-container matColumnDef="owner">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Właściciel </th>
+            <td mat-cell *matCellDef="let row"> {{row.owner}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+          </tr>
+        </table>
+      </ng-container>
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of projects"></mat-paginator>
+    </div>
   </div>
 </div>
 
 <ng-template #loading>
-  <mat-spinner></mat-spinner>
+  <div class="spinner-container">
+    <mat-spinner></mat-spinner>
+  </div>
 </ng-template>
+
+
