--- a/src/app/pages/projects/projects/projects.component.html
+++ b/src/app/pages/projects/projects/projects.component.html
@@ -2,7 +2,7 @@
   <div class="w-3/4 mt-4">
     <div class="flex lg:items-baseline lg:justify-between lg:flex-row items-center flex-col-reverse">
       <mat-form-field>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Filtruj..." #input>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Filtruj projekty..." #input>
       </mat-form-field>
       <div class="flex space-x-0 flex-col sm:flex-row sm:space-x-4">
         <button class="mb-4 w-44" mat-raised-button color="primary" (click)="newProject()" mat-button>
@@ -14,42 +14,56 @@
       </div>
     </div>
 
-    <div class="mat-elevation-z8">
+    <div class="mat-elevation-z8 overflow-auto">
       <ng-container *ngIf="projects | async as projectList; else loading">
         <table mat-table [dataSource]="dataSource" matSort>
 
           <!-- Title Column -->
           <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nazwa </th>
-            <td mat-cell *matCellDef="let row"> {{row.title}} </td>
+            <th class="w-1/3" mat-header-cell *matHeaderCellDef mat-sort-header> Nazwa </th>
+            <td class="w-1/3" mat-cell *matCellDef="let row"> {{row.title}} </td>
           </ng-container>
 
           <!-- Key Column -->
           <ng-container matColumnDef="key">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Skrót </th>
-            <td mat-cell *matCellDef="let row"> {{row.key}} </td>
+            <th class="w-1/3" mat-header-cell *matHeaderCellDef mat-sort-header> Skrót </th>
+            <td class="w-1/3" mat-cell *matCellDef="let row"> {{row.key}} </td>
           </ng-container>
 
           <!-- Owner Column -->
           <ng-container matColumnDef="owner">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Właściciel </th>
-            <td mat-cell *matCellDef="let row"> {{row.owner}} </td>
+            <th class="w-1/3" mat-header-cell *matHeaderCellDef mat-sort-header> Właściciel </th>
+            <td class="w-1/3" mat-cell *matCellDef="let row"> {{row.owner}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="actions">
+            <th class="w-2" mat-header-cell *matHeaderCellDef></th>
+            <td class="w-2" mat-cell *matCellDef="let row">
+              <button mat-icon-button color="primary" [matMenuTriggerFor]="menu" aria-label="Menu" (click)="$event.stopPropagation(); selectedRowForMenu = row">
+                <mat-icon>menu</mat-icon>
+              </button>
+            </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="table-row" (click)="goToProjectTasks(row.id)"></tr>
 
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            <td class="mat-cell" colspan="4">Brak projektów pasujących do filtru: "{{input.value}}"</td>
           </tr>
         </table>
       </ng-container>
 
-      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of projects"></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[12]" showFirstLastButtons="false" aria-label="Select page of projects"></mat-paginator>
     </div>
   </div>
 </div>
+
+<mat-menu #menu="matMenu">
+  <button mat-menu-item (click)="editProject()">Edytuj projekt</button>
+  <button mat-menu-item>Usuń projekt</button>
+</mat-menu>
 
 <ng-template #loading>
   <div class="spinner-container">
