--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-mat-toolbar {
+/* mat-toolbar {
   margin-bottom: 20px;
 }
 
@@ -36,7 +36,7 @@ app-new-task {
   padding-top: 10px;
   text-align: center;
   opacity: 0.2;
-}
+} */
 
 .cdk-drag-animating {
   transition: transform 250ms;
