--- a/src/app/pages/projects/project-dialog/project-dialog.component.html
+++ b/src/app/pages/projects/project-dialog/project-dialog.component.html
@@ -1,4 +1,6 @@
-<mat-form-field>
+<h2 mat-dialog-title class="mb-4 text-center">Edytuj projekt</h2>
+<div mat-dialog-content>
+  <mat-form-field class="w-full">
   <mat-label>Title</mat-label>
   <input matInput cdkFocusInitial [(ngModel)]="data.project.title" />
 </mat-form-field>
@@ -16,12 +18,4 @@
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="{ project: data.project }">OK</button>
   <button mat-button (click)="cancel()">Cancel</button>
-  <button
-    *ngIf="data.enableDelete"
-    mat-fab
-    color="primary"
-    aria-label="Delete"
-    [mat-dialog-close]="{ project: data.project, delete: true }">
-    <mat-icon>delete</mat-icon>
-  </button>
 </div>
