--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -32,7 +32,7 @@
         </div>
 
         <button mat-raised-button color="primary" class="w-full mb-4" [disabled]="!form.valid"
-        (click)="authService.SignIn(form.get('email')?.value, form.get('password')?.value)">
+        (click)="authService.SignIn(form.get('email')?.value, form.get('password')?.value)" (click)="showLoadingFunc()">
           Zaloguj się
         </button>
       </form>
@@ -59,5 +59,12 @@
         <span>Nie masz konta? <a routerLink="/register-user" style="color: #3f51b5;">Zarejsetruj się</a></span>
       </div>
     </mat-card>
+    <ng-container *ngIf="showLoading; else noLoading">
+      <mat-progress-bar mode="indeterminate" style="border-radius: 50%; height: 30px;"></mat-progress-bar>
+    </ng-container>
   </div>
 </div>
+
+<ng-template #noLoading>
+  <mat-progress-bar mode="indeterminate" style="border-radius: 50%; height: 30px; visibility: hidden;"></mat-progress-bar>
+</ng-template>
