--- a/src/app/pages/projects/project-dialog/project-dialog.component.html
+++ b/src/app/pages/projects/project-dialog/project-dialog.component.html
@@ -12,7 +12,7 @@
 
 <mat-form-field>
   <mat-label>Color Code</mat-label>
-  <input matInput [(ngModel)]="data.project.colorCode"/>
+  <input matInput type="color" [(ngModel)]="data.project.colorCode"/>
 </mat-form-field>
 
 <div mat-dialog-actions>
