--- a/src/app/shared/components/user-info/user-info.component.html
+++ b/src/app/shared/components/user-info/user-info.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center">
-  <ng-container *ngIf="user | async as user; else loading">
+  <ng-container *ngIf="user; else loading">
     <img class="w-8 h-8 rounded-full mr-2" src="{{(user.photoURL) ? user.photoURL : '/assets/images/default_pp.jpg'}}" alt="Profile Picture">
     <span>{{ user.email }}</span>
   </ng-container>
