--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -32,7 +32,7 @@
         </div>
 
         <button mat-raised-button color="primary" class="w-full mb-4" [disabled]="!form.valid"
-        (click)="authService.SignIn(form.get('email')?.value, form.get('password')?.value)" (click)="showLoadingFunc()">
+        (click)="authService.SignIn(form.get('email')?.value, form.get('password')?.value)" (click)="authService.showLoadingFunc()">
           Zaloguj się
         </button>
       </form>
@@ -59,7 +59,7 @@
         <span>Nie masz konta? <a routerLink="/register-user" style="color: #3f51b5;">Zarejsetruj się</a></span>
       </div>
     </mat-card>
-    <ng-container *ngIf="showLoading; else noLoading">
+    <ng-container *ngIf="authService.showLoading; else noLoading">
       <mat-progress-bar mode="indeterminate" style="border-radius: 50%; height: 30px;"></mat-progress-bar>
     </ng-container>
   </div>
