--- a/src/app/pages/tasks/task-list/task-list.component.html
+++ b/src/app/pages/tasks/task-list/task-list.component.html
@@ -1,56 +1,59 @@
-<div class="content-wrapper">
-  <p>{{projectId}}</p>
-  <button (click)="newTask()" mat-button>
-    <mat-icon>add</mat-icon> Add Task
-  </button>
+<div class="absolute top-16 w-full" style="height: calc(100% - 64px); background-color: #f5f5f5;">
+  <div class="flex justify-center text-base w-full" style="background-color: #f5f5f5; height: full">
+    <div class="content-wrapper">
+      <button (click)="newTask()" mat-button>
+        <mat-icon>add</mat-icon> Add Task
+      </button>
 
-  <div class="container-wrapper">
-    <div class="container">
-      <h2>Backlog</h2>
+      <div class="container-wrapper">
+        <div class="container">
+          <h2>Backlog</h2>
 
-      <mat-card
-        cdkDropList
-        id="todo"
-        #todoList="cdkDropList"
-        [cdkDropListData]="todo | async"
-        [cdkDropListConnectedTo]="[doneList, inProgressList]"
-        (cdkDropListDropped)="drop($event)"
-        class="list">
-        <p class="empty-label" *ngIf="(todo | async)?.length === 0">Empty list</p>
-        <app-task (edit)="editTask('todo', $event)" *ngFor="let task of todo | async" cdkDrag [task]="task"></app-task>
-      </mat-card>
-    </div>
+          <mat-card
+            cdkDropList
+            id="todo"
+            #todoList="cdkDropList"
+            [cdkDropListData]="todo | async"
+            [cdkDropListConnectedTo]="[doneList, inProgressList]"
+            (cdkDropListDropped)="drop($event)"
+            class="list">
+            <p class="empty-label" *ngIf="(todo | async)?.length === 0">Empty list</p>
+            <app-task (edit)="editTask('todo', $event)" *ngFor="let task of todo | async" cdkDrag [task]="task"></app-task>
+          </mat-card>
+        </div>
 
-    <div class="container">
-      <h2>In progress</h2>
+        <div class="container">
+          <h2>In progress</h2>
 
-      <mat-card
-        cdkDropList
-        id="inProgress"
-        #inProgressList="cdkDropList"
-        [cdkDropListData]="inProgress | async"
-        [cdkDropListConnectedTo]="[todoList, doneList]"
-        (cdkDropListDropped)="drop($event)"
-        class="list">
-        <p class="empty-label" *ngIf="(inProgress | async)?.length === 0">Empty list</p>
-        <app-task (edit)="editTask('inProgress', $event)" *ngFor="let task of inProgress | async" cdkDrag [task]="task"></app-task>
-      </mat-card>
-    </div>
+          <mat-card
+            cdkDropList
+            id="inProgress"
+            #inProgressList="cdkDropList"
+            [cdkDropListData]="inProgress | async"
+            [cdkDropListConnectedTo]="[todoList, doneList]"
+            (cdkDropListDropped)="drop($event)"
+            class="list">
+            <p class="empty-label" *ngIf="(inProgress | async)?.length === 0">Empty list</p>
+            <app-task (edit)="editTask('inProgress', $event)" *ngFor="let task of inProgress | async" cdkDrag [task]="task"></app-task>
+          </mat-card>
+        </div>
 
-    <div class="container">
-      <h2>Done</h2>
+        <div class="container">
+          <h2>Done</h2>
 
-      <mat-card
-        cdkDropList
-        id="done"
-        #doneList="cdkDropList"
-        [cdkDropListData]="done | async"
-        [cdkDropListConnectedTo]="[todoList, inProgressList]"
-        (cdkDropListDropped)="drop($event)"
-        class="list">
-        <p class="empty-label" *ngIf="(done | async)?.length === 0">Empty list</p>
-        <app-task (edit)="editTask('done', $event)" *ngFor="let task of done | async" cdkDrag [task]="task"></app-task>
-      </mat-card>
+          <mat-card
+            cdkDropList
+            id="done"
+            #doneList="cdkDropList"
+            [cdkDropListData]="done | async"
+            [cdkDropListConnectedTo]="[todoList, inProgressList]"
+            (cdkDropListDropped)="drop($event)"
+            class="list">
+            <p class="empty-label" *ngIf="(done | async)?.length === 0">Empty list</p>
+            <app-task (edit)="editTask('done', $event)" *ngFor="let task of done | async" cdkDrag [task]="task"></app-task>
+          </mat-card>
+        </div>
+      </div>
     </div>
   </div>
 </div>
