--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,5 +1,5 @@
-<div style="height: calc(100% - 64px); background-color: #f5f5f5;">
-  <div class="flex items-center justify-center text-base w-full absolute top-16" style="background-color: #f5f5f5; height: calc(100% - 64px);">
+<div class="grid place-items-center w-full absolute top-16" style="height: calc(100% - 64px); background-color: #f5f5f5;">
+  <div class="flex items-center justify-center text-base w-full h-full" style="background-color: #f5f5f5">
     <div class="w-2/3 md:w-1/2 xl:w-1/3">
       <mat-card class="p-6">
         <h2 class="mb-4 text-center">Twoje konto</h2>
@@ -20,6 +20,7 @@
         </div>
 
       </mat-card>
+      <div style="height: 30px;"></div>
     </div>
   </div>
 </div>
