--- a/src/app/pages/projects/projects/projects.component.html
+++ b/src/app/pages/projects/projects/projects.component.html
@@ -7,7 +7,7 @@
         </mat-form-field>
         <div class="flex space-x-0 flex-col sm:flex-row sm:space-x-4">
           <button class="mb-4 w-44" mat-raised-button color="primary" routerLink="/projects/new-project" mat-button>
-            Stwórz projekt
+            Nowy projekt
           </button>
           <button class="mb-4 w-44" mat-raised-button color="primary" (click)="joinProject(projectId)">
             Dołącz do projektu
