--- a/src/app/pages/tasks/task/task.component.css
+++ b/src/app/pages/tasks/task/task.component.css
@@ -5,7 +5,8 @@
 .item {
   margin: 10px;
   cursor: pointer;
-  padding: 10px;
-  border: solid 1px #ccc;
+  padding: 15px;
+  background-color: #3f51b5;
+  color: white;
 
 }
