--- a/src/app/pages/tasks/task-dialog/task-dialog.component.html
+++ b/src/app/pages/tasks/task-dialog/task-dialog.component.html
@@ -8,6 +8,14 @@
   <textarea matInput [(ngModel)]="data.task.description"></textarea>
 </mat-form-field>
 
+<mat-form-field>
+  <mat-label>Choose a date</mat-label>
+  <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker" [(ngModel)]="data.task.dueTo">
+  <mat-hint>MM/DD/YYYY</mat-hint>
+  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-datepicker #picker></mat-datepicker>
+</mat-form-field>
+
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="{ task: data.task }">OK</button>
   <button mat-button (click)="cancel()">Cancel</button>
