--- a/src/app/pages/tasks/task/task.component.css
+++ b/src/app/pages/tasks/task/task.component.css
@@ -6,7 +6,15 @@
   margin: 10px;
   cursor: pointer;
   padding: 15px;
-  background-color: #3f51b5;
-  color: white;
+  /* background-color: #3f51b5;
+  color: white; */
+  background-color: white;
   text-align: start;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  height: 120px;
+  overflow: auto;
+}
+
+.item:hover{
+  background-color: whitesmoke;
 }
