--- a/src/app/pages/tasks/task-list/task-list.component.css
+++ b/src/app/pages/tasks/task-list/task-list.component.css
@@ -1,9 +1,10 @@
 .list {
-  min-height: 134px;
+  min-height: 140px;
   max-height: calc(100vh - 280px);
   border-radius: 4px;
   background-color: white;
   overflow-y: auto;
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12)
 }
 
 .empty-label {
@@ -25,6 +26,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 134px;
+  height: 140px;
   background-color: white;
+}
+
+.project-title{
+  color: #3f51b5;
+  letter-spacing: 2px;
 }
