--- a/src/app/pages/tasks/task-list/task-list.component.html
+++ b/src/app/pages/tasks/task-list/task-list.component.html
@@ -1,8 +1,11 @@
 <div class="absolute top-16 w-full" style="height: calc(100% - 64px); background-color: #f5f5f5;">
   <div class="flex justify-center text-base w-full" style="background-color: #f5f5f5; height: full">
-    <div class="w-3/4" style="margin-top: 27px;">
+    <div class="w-3/4" style="margin-top: 26px;">
       <div class="flex sm:items-baseline sm:justify-between sm:flex-row items-center flex-col">
-        <xng-breadcrumb class="mb-4 text-xs" style="color: #3f51b5;" [separator]="iconTemplate"></xng-breadcrumb>
+        <div class="flex flex-col">
+          <h1 *ngIf="project" class="project-title"><strong>Projekt - {{project.title}}</strong></h1>
+          <xng-breadcrumb class="mb-4 text-xs" style="color: #3f51b5;" [separator]="iconTemplate"></xng-breadcrumb>
+        </div>
         <button class="mb-4 w-44" mat-raised-button color="primary" (click)="newTask()" mat-button>
           Nowe zadanie
         </button>
@@ -21,10 +24,10 @@
             (cdkDropListDropped)="drop($event)"
             class="list">
             <div *ngIf="!loadingTodo; else loading">
-              <div *ngIf="(todo | async)?.length === 0" class="flex items-center justify-center" style="height: 134px;">
+              <div *ngIf="(todo | async)?.length === 0" class="flex items-center justify-center" style="height: 140px;">
                 <p class="empty-label">Brak zadań</p>
               </div>
-              <app-task (edit)="editTask('todo', $event)" *ngFor="let task of todo | async" cdkDrag [task]="task"></app-task>
+              <app-task (showDetails)="showDetails('todo',$event)" *ngFor="let task of todo | async" cdkDrag [task]="task"></app-task>
             </div>
           </mat-card>
         </div>
@@ -41,10 +44,10 @@
             (cdkDropListDropped)="drop($event)"
             class="list">
             <div *ngIf="!loadingInProgress; else loading">
-              <div *ngIf="(inProgress | async)?.length === 0" class="flex items-center justify-center" style="height: 134px;">
+              <div *ngIf="(inProgress | async)?.length === 0" class="flex items-center justify-center" style="height: 140px;">
                 <p class="empty-label">Brak zadań</p>
               </div>
-              <app-task (edit)="editTask('inProgress', $event)" *ngFor="let task of inProgress | async" cdkDrag [task]="task"></app-task>
+              <app-task (showDetails)="showDetails('inProgress',$event)" *ngFor="let task of inProgress | async" cdkDrag [task]="task"></app-task>
             </div>
           </mat-card>
         </div>
@@ -61,10 +64,10 @@
             (cdkDropListDropped)="drop($event)"
             class="list">
             <div *ngIf="!loadingInProgress; else loading">
-              <div *ngIf="(done | async)?.length === 0" class="flex items-center justify-center" style="height: 134px;">
+              <div *ngIf="(done | async)?.length === 0" class="flex items-center justify-center" style="height: 140px;">
                 <p class="empty-label">Brak zadań</p>
               </div>
-              <app-task (edit)="editTask('done', $event)" *ngFor="let task of done | async" cdkDrag [task]="task"></app-task>
+              <app-task (showDetails)="showDetails('done',$event)" *ngFor="let task of done | async" cdkDrag [task]="task"></app-task>
             </div>
           </mat-card>
         </div>
