--- a/src/app/pages/tasks/task/task.component.html
+++ b/src/app/pages/tasks/task/task.component.html
@@ -1,5 +1,4 @@
-<mat-card class="item" *ngIf="task" (click)="edit.emit(task)">
+<mat-card class="item" *ngIf="task" (click)="showDetails.emit(task)">
   <h2>{{ task.title }}</h2>
-  <p>{{ task.description }}</p>
-  <p>Do kiedy: {{ task.dueTo | dateFormat }}</p>
+  <p>Deadline: {{ task.dueTo | dateFormat }}</p>
 </mat-card>
