--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="grid place-items-center w-full absolute top-16" style="height: calc(100% - 64px); background-color: #f5f5f5;">
   <div class="flex items-center justify-center text-base w-full h-full" style="background-color: #f5f5f5">
-    <div class="w-2/3 md:w-1/2 xl:w-1/3">
+    <div class="w-2/3 md:w-1/2 xl:w-1/4">
       <mat-card class="p-6">
         <h2 class="mb-4 text-center">Twoje konto</h2>
 
@@ -8,16 +8,16 @@
           <div class="profile-picture mb-4">
             <img src="{{(user.photoURL) ? user.photoURL : '/assets/images/default_pp.jpg'}}" alt="Profile Picture" class="w-28 h-28 rounded-full mx-auto">
           </div>
-          <p class="profile-field">Imię: <strong>{{ user.displayName || 'N/A' }}</strong></p>
+          <!-- <p class="profile-field">Imię: <strong>{{ user.displayName || 'N/A' }}</strong></p> -->
           <p class="profile-field">E-mail: <strong>{{ user.email }}</strong></p>
           <p class="profile-field">E-mail zferyfikowany: <strong>{{ user.emailVerified ? 'Tak' : 'Nie' }}</strong></p>
         </div>
 
-        <div class="flex justify-center">
+        <!-- <div class="flex justify-center">
           <button mat-raised-button color="primary" class="w-2/3 lg:w-1/2 2xl:w-1/3 mb-4">
               Edytuj dane
           </button>
-        </div>
+        </div> -->
 
       </mat-card>
       <div style="height: 30px;"></div>
