--- a/src/app/pages/tasks/task/task.component.html
+++ b/src/app/pages/tasks/task/task.component.html
@@ -1,4 +1,4 @@
 <mat-card class="item" *ngIf="task" (click)="showDetails.emit(task)">
   <h2>{{ task.title }}</h2>
-  <p>Deadline: {{ task.dueTo | dateFormat }}</p>
+  <p>Termin: {{ task.dueTo | dateFormat }}</p>
 </mat-card>
