--- a/src/app/pages/tasks/task-list/task-list.component.css
+++ b/src/app/pages/tasks/task-list/task-list.component.css
@@ -34,3 +34,25 @@
   color: #3f51b5;
   letter-spacing: 2px;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: whitesmoke;
+}
+
+/* Style the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #3f51b5;
+  border-radius: 5px;
+}
+
+/* Style the scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #6874c4;
+}
