--- a/src/app/pages/tasks/task/task.component.css
+++ b/src/app/pages/tasks/task/task.component.css
@@ -1,20 +1,28 @@
-:host {
+/* :host {
   display: block;
-}
+} */
 
 .item {
   margin: 10px;
   cursor: pointer;
   padding: 15px;
-  /* background-color: #3f51b5;
-  color: white; */
   background-color: white;
   text-align: start;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
   height: 120px;
   overflow: auto;
+  text-align: center;
+  user-select: none;
 }
 
 .item:hover{
   background-color: whitesmoke;
+}
+
+.past-due {
+  color: rgb(247, 43, 43);
+}
+
+.future-due {
+  color: #3f51b5;
 }
